footer spacing fix for phone

--- a/css/tegemoetkomingen.css
+++ b/css/tegemoetkomingen.css
@@ -11,7 +11,7 @@ main {
 
 @media screen and (max-width: 768px) {
     main {
-        margin-bottom: 1600px;
+        margin-bottom: 2200px;
     }
 }
 
